-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-01-10	jluis
	* gmt_customio.c:	GMT_gdal_read_grd was ignoring subregion requests like for
				instances "grdcut -R..." Such request would cause a crash.
	* gmt_gdalread.h:	Add members to inform GMT_gdalread on the coordinates
				registration type used when subregion requests.
	* gmt_grdio.c:		Recognize web located files hose name starts with /vsicurl/...
	* gmt_io.c:				""

2012-01-10	pwessel
	* gmt_map.c:		-R0/360 and -JMlon/lat would not set global_map properly,
				giving NaNs as scale.

2012-01-09	pwessel
	* gmtmath.c:		The COL operator inadvertently set a pointer to NULL, then
				tried to use it.  Also, with operands whatsoever we crashed
				as the Template struct was deallocated twice.

2012-01-08	pwessel
	* grdcut.c:		The -Z would give incorrect -R for pixel grids.  Now also
				print warning if output grid equals input grid (no change).

2012-01-08      remko
	* xyz2grd.txt:		Added missing 'H' and 'I' to -Z options.
	* xyz2grd.c:		Bug fix: -Z..h etc needs to imply proper -bi setting.
	* gmt_io.c, gmtapi_util.c:	Bug fixes: now properly identifying all I/O types.
				Fixed incorrect swapping of signed integers (short and long).

2012-01-06	pwessel
	* gmt_plot.c:		Made geo_vector properly adjust for half-head vectors
	* pslib.c:		Made psl_vector and psl_matharc adjust for half-head vectors
	* gmt_init.c:		Revised -Sf front syntax to use modifiers. Backwards compatible.
	* gmt_plot.c:		In GMT_xy_axis, string[GMT_CALSTRING_LENGTH] was used to hold
				labels that could be longer, leading to memory corruption.

2012-01-05	jluis
	* gmt_customio.c:	Make nx and ny of 'unsigned short int' type in surfer6 header.
				Note that original format specification by Golden Software
				clearly say they are 'short int' but this change shouldn't