@@ -2,6 +2,10 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2012-01-13	pwessel
+	* gmt_support.c:	The quoted line labeling would not free an allocated label
+				when the label had no text string.
+
 2012-01-10	jluis
 	* gmt_customio.c:	GMT_gdal_read_grd was ignoring subregion requests like for
 				instances "grdcut -R..." Such request would cause a crash.
